--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gastos App</title>
-    <link rel="stylesheet" , href="https://bootswatch.com/5/litera/bootstrap.min.css">
+    <!-- Include Bootstrap CSS or your preferred stylesheet -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Gastos App</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="{{ url_for('index') }}">Gastos App</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cuentas</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Transactions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Movimientos</a>
+                        <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Datos</a>
+                        <a class="nav-link" href="{{ url_for('categories') }}">Categories</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container pt-4">
+    <!-- Content -->
+    <div class="container mt-4">
         {% block body %}
-        {% endblock body %}
+        {% endblock %}
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    
+    <!-- Include Bootstrap JS or your preferred scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
