--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Gastos App</title>
-        <!-- Include Bootswatch Theme CSS -->
-        <!-- Choose either Flatly or Minty -->
-        <!-- For Flatly Theme -->
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/flatly/bootstrap.min.css"> -->
-        <!-- For Minty Theme -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/minty/bootstrap.min.css">
-    </head>
-<body>
+<head>
+    <meta charset="UTF-8">
+    <title>Gastos App</title>
+    <!-- Include Bootswatch Theme CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/minty/bootstrap.min.css">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+</head>
+<body style="background-color: #f4f6f9;">
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('index') }}">Gastos App</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
@@ -22,13 +20,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Transactions</a>
+                        <a class="nav-link text-white" href="{{ url_for('index') }}">Index</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
+                        <a class="nav-link text-white" href="{{ url_for('transactions') }}">Transactions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('categories') }}">Categories</a>
+                        <a class="nav-link text-white" href="{{ url_for('statistics') }}">Statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{{ url_for('categories') }}">Categories</a>
                     </li>
                 </ul>
             </div>
@@ -36,12 +37,13 @@
     </nav>
 
     <!-- Content Block -->
-    <div class="container mt-4">
+    <div class="container mt-4 p-4 rounded shadow" style="background-color: #ffffff;">
         {% block body %}
         {% endblock %}
     </div>
 
-    <!-- Include Bootstrap JS (Popper.js is included in Bootstrap 5 bundle) -->
+    <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
