--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -32,7 +32,9 @@
                     <td>{{ "{:.2f}".format(transaction[8]) }}</td>
                     <td>
                         <a href="{{ url_for('edit_transaction', id=transaction[0]) }}" class="btn btn-sm btn-warning">Edit</a>
-                        <a href="{{ url_for('delete_transaction', id=transaction[0]) }}" class="btn btn-sm btn-danger">Delete</a>
+                        <form action="{{ url_for('delete_transaction', id=transaction[0]) }}" method="post" style="display:inline;">
+                            <button type="submit" class="btn btn-sm btn-danger" onclick="return confirmDelete();">Delete</button>
+                        </form>
                     </td>
                 </tr>
                 {% endfor %}
@@ -40,4 +42,10 @@
         </table>
     </div>
 </div>
+
+<script>
+    function confirmDelete() {
+        return confirm('Are you sure you want to delete this transaction?');
+    }
+</script>
 {% endblock %}
